# Auth_sprint_2

./: Makefile  README.md  docker-compose.yml  system-diagrams.md
auth_service/: .env  commands.py  main.py  migrate.Dockerfile  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 0627b0ce14fd_add_default_roles.py  1f34eda8f925_добавлен_oauth.py  5247b31f993a_add_partition.py  b38e16cca450_initial_migrate.py
auth_service/api/v1/: auth.py  oauth.py  permission.py  role.py  user.py
auth_service/ci/: env.py  run_migrations.sh
auth_service/core/: config.py  jeager.py  lifespan.py  limiter.py
auth_service/db/: database.py  redis.py
auth_service/decorators/: permissions.py
auth_service/models/: permission.py  role.py  user.py
auth_service/nginx/: nginx.conf  site.conf
auth_service/nginx/conf.d/: site.conf
auth_service/schemas/: permission.py  role.py  user.py
auth_service/services/: auth_service.py  oauth_service.py  permission_service.py  role_service.py  user_service.py
auth_service/utils/: auth_request.py  pagination_params.py  permissions.py
fastapi_solution/: Dockerfile  main.py  pyproject.toml
fastapi_solution/api/dtos/: film_dto.py  genre_dto.py  person_dto.py
fastapi_solution/api/v1/: films.py  genres.py  persons.py
fastapi_solution/core/: config.py  jwt.py  lifespan.py
fastapi_solution/db/: elastic.py  redis.py
fastapi_solution/models/: film.py  pagination_params.py  person.py
fastapi_solution/nginx/: site.conf
fastapi_solution/services/: abstract_service.py  film_service.py  genre_service.py  person_service.py
fastapi_solution/utils/: film_util.py
movies_admin/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
movies_admin/config/: .env  example.env  settings.py
movies_admin/config/components/: auth_password_validation.py  database.py  installed_apps.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/migrations/: 0001_initial.py  0002_alter_genrefilmwork_options_and_more.py  0003_filmwork_file_path.py  0004_rename_created_genrefilmwork_created_at_and_more.py  0005_auto_20240511_1902.py  0006_filmwork_film_work_title_idx_and_more.py  0007_alter_filmwork_options_alter_genre_options_and_more.py
movies_admin/nginx/: site.conf
movies_admin/users/: auth.py  models.py
movies_admin/users/migrations/: 0001_initial.py
tests/: .env  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml
tests/functional/: settings.py
tests/functional/fixtures/: api_fixture.py  oauth_fixtures.py  postgres_fixture.py  redis_fixture.py
tests/functional/src/: test_auth.py  (+3 more)
(+8 files in other folders)
