[tool.poetry]
name = "movies-admin"
version = "0.1.1"
description = ""
authors = ["d.cherenkov <jokcik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.11"
flake8 = "6.1.0"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.3"
django-split-settings = "1.3.1"
gunicorn = "^22.0.0"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
